@@ -7,7 +7,10 @@ flexc++ (2.05.00)
 
   * New parser, built by bisonc++ V5.00.00.
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 30 Mar 2016 11:52:14 +0200
+  * Repaired the faulty long-option definitions in main.cc, due to which
+    long options were not properly recognized
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 30 Mar 2016 17:24:52 +0200
 
 flexc++ (2.04.00)
 
